[package]
name = "onetagger-apple-music"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
log = "0.4"
regex = "1.7"
xmlparser = "0.13"
serde_json = "1.0"
fancy-regex = "0.11"

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"], default-features = false }

onetagger-tagger = { git = "https://github.com/Marekkon5/onetagger.git" }

[profile.release]
strip = true
opt-level = 3